--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>MetinX</title>
+      <title>MTX PATCHER</title>
    </head>
    <body>
 	<p>MTX PATCHER</p>
